# storeman

./: README.md  index.html  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/connection/: commands.rs  config.rs  connection.rs  mod.rs
src-tauri/src/features/download/: commands.rs  download.rs  mod.rs
src-tauri/src/features/shared/: error.rs  mod.rs  progress.rs  types.rs
src-tauri/src/features/upload/: commands.rs  mod.rs  upload.rs
src/features/connection/: connectionService.ts  connectionStore.ts  connectionTypes.ts  connectionUtils.ts
src/features/connection/components/: ConnectionDialog.tsx
src/features/download/components/: DownloadTab.tsx
src/features/node/: nodeService.ts  nodeStore.ts
src/features/node-info/: nodeService.ts  nodeStore.ts  nodeTypes.ts
src/features/node-info/components/: NodeTab.tsx
src/features/node/components/: NodeTab.tsx
src/features/upload/components/: UploadTab.tsx
