[package]
name = "storeman"
version = "0.1.0"
description = "storeman is a Desktop & Android app for connecting, uploading and downloading files from Logos Storage."
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "storeman_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
codex-bindings = { path = "/home/lowkey/Development/logos/codex-rust-bindings" }
tokio = { version = "1", features = ["full"] }
once_cell = "1.21"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
uuid = { version = "1.0", features = ["v4"] }
dirs = "6.0"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
